<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_backgroung"
    tools:context=".ui.signIn.SignInActivity">

    <ImageView
        android:id="@+id/lgbemrr"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/bemrr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/squreform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lgbemrr">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/label_email_phone_number"
            android:padding="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edsign_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/label_password"
            android:padding="8dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_email1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSignIn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/button_color"
            android:clickable="true"
            android:text="@string/label_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edsign_password1"
            app:shapeAppearance="@color/button_color" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toEndOf="@id/btSignIn"
            app:layout_constraintTop_toBottomOf="@id/btSignIn">

            <TextView
                android:id="@+id/tvforgotPw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/label_forgot_password"
                android:textColor="@color/forgot_pass"
                android:textSize="10sp" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/singleLineTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/single_line_background"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:text="@string/label_or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/form" />


    <LinearLayout
        android:id="@+id/linear_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/singleLineTextView"
        app:layout_constraintStart_toStartOf="@id/singleLineTextView"
        app:layout_constraintTop_toBottomOf="@id/singleLineTextView">

        <TextView
            android:id="@+id/lgSignInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/google_logo"
            android:text="@string/logo_google"
            android:textColor="@color/white" />

        <Space
            android:layout_width="70dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lgSignInFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/facebook_logo"
            android:text="@string/logo_facebook"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/singleLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/single_line_background"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="@id/linear_logo"
        app:layout_constraintStart_toStartOf="@id/linear_logo"
        app:layout_constraintTop_toBottomOf="@id/linear_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/singleLine"
        app:layout_constraintStart_toStartOf="@id/singleLine"
        app:layout_constraintTop_toBottomOf="@id/singleLine">


        <TextView
            android:id="@+id/tvNotHaveAc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/lable_don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/label_sign_in_underline"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>